--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+    "@vercel/postgres": "^0.4.2",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "next": "14.2.5",
     "next-auth": "^4.23.1",
-    "bcrypt": "^5.1.1",
-    "@vercel/postgres": "^0.4.2"
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "@types/bcrypt": "^5.0.0"
+    "typescript": "^5"
   }
 }
